k3s/30-logging/11-loki/minio-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-loki
  namespace: default
  labels:
    app: minio
spec:
  podManagementPolicy: OrderedReady
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
  type: RollingUpdate
  rollingUpdate:
  maxUnavailable: 1
  maxSurge: 100%
  selector:
    matchLabels:
      app: minio
  serviceName: minio-loki
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: minio
        name: minio-loki
    spec:
      terminationGracePeriode: 120
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
      containers:
        - name: minio
          image: minio/minio:RELEASE.2021-09-18T18-09-59Z
          command: 
            - sh
          args: 
            - -c
            - 'mkdir -p /data/loki && /opt/bin/minio server /data'
          volumeMounts:
            - name: storage
              mountPath: /data
          ports:
            - name: minio
              containerPort: 9000
              protocol: TCP
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: loki-data
