k3s/30-logging/11-loki/loki-service.yml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: default
spec:
  ports:
    - port: 3100
      protocol: TCP
      targetPort: http-metrics
  selector:
    app: loki
  sessionAffinity: None
  type: LoadBalancer
