k3s/30-logging/11-loki/minio-service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-loki
  namespace: default
spec:
  ports:
    - port: 9000
      protocol: TCP
      targetPort: minio
  selector:
    app: minio
    name: minio-loki
  sessionAffinity: None
