k3s/30-logging/11-loki/loki-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: freeipa-issuer
    cert-manager.io/issuer-group: certmanager.freeipa.org
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/common-name: loki.k3s.i.stabl.one
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: lokiauth
spec:
  tls:
  - hosts:
    - loki.k3s.i.stabl.one
    secretName: loki-cert
  rules:
    - host: loki.k3s.i.stabl.one
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: loki-loki-distributed-gateway
                port:
                  number: 80
